--- a/00-tic-tac-toe.html
+++ b/00-tic-tac-toe.html
@@ -66,8 +66,8 @@
 		fieldPlayer1 = [];
 
 		msg = document.querySelector('#msg');
-		Xcount = document.querySelector('#counterX');
-		Ocount = document.querySelector('#counterO');
+		counterX = document.querySelector('#counterX');
+		counterO = document.querySelector('#counterO');
 
 		//player1 and player2 score
 		let XScore = 0;
@@ -151,10 +151,10 @@
 
 			if (msg.innerHTML = 'player X won!') {
 				XScore++;
-				Xcount.innerHTML = XScore;
+				counterX.innerHTML = XScore;
 			} else if (msg.innerHTML = 'player O won!') {
 				OScore++;
-				Ocount.innerHTML = OScore;
+				counter0.innerHTML = OScore;
 			}
 
 		}
