--- a/00-tic-tac-toe.html
+++ b/00-tic-tac-toe.html
@@ -32,23 +32,26 @@
 	<h2 id="counterX">0</h2>
 	<p>Player O :</p>
 	<h2 id="counterO">0</h2>
+	<p>Tie :</p>
+	<h2 id="tie">0</h2>
+	<!-- restart -->
 	<h2 id="msg">Click fields to play!</h2>
 	<button id="restart">Restart game!</button>
 
 	<script>
 		/*
-																																																																																																																																																																																																																																																																																																																																																																																																																								Stuff to handle ;-):
-																																																																																																																																																																																																																																																																																																																																																																																																																								1. Make the fields clickable (player0 uses "X", player1 "0")
-																																																																																																																																																																																																																																																																																																																																																																																																																								2. Keep track of all used fields (fieldsPlayed) and of the fields each player chose (fieldsPlayer0, fieldsPlayer1)
-																																																																																																																																																																																																																																																																																																																																																																																																																								3. Avoid that úsed fields can be played again and implement feedback like "Field already taken" (alert();)
-																																																																																																																																																																																																																																																																																																																																																																																																																								4. Check for winning combinations
-																																																																																																																																																																																																																																																																																																																																																																																																																								5. Implement feedback to the players (winning or game is a draw)
-																																																																																																																																																																																																																																																																																																																																																																																																																								6. End the game, avoid further playing
-																																																																																																																																																																																																																																																																																																																																																																																																																								7. Add a "Play again button"
-																																																																																																																																																																																																																																																																																																																																																																																																																								8. Implement "eternal" game statistics (using local storage!)
-																																																																																																																																																																																																																																																																																																																																																																																																																								9. Style the game as fancy and responsive as you can ;-)
+																																																																																																																																																																																																																																																																																																																																																																																																																																														Stuff to handle ;-):
+																																																																																																																																																																																																																																																																																																																																																																																																																																														1. Make the fields clickable (player0 uses "X", player1 "0")
+																																																																																																																																																																																																																																																																																																																																																																																																																																														2. Keep track of all used fields (fieldsPlayed) and of the fields each player chose (fieldsPlayer0, fieldsPlayer1)
+																																																																																																																																																																																																																																																																																																																																																																																																																																														3. Avoid that úsed fields can be played again and implement feedback like "Field already taken" (alert();)
+																																																																																																																																																																																																																																																																																																																																																																																																																																														4. Check for winning combinations
+																																																																																																																																																																																																																																																																																																																																																																																																																																														5. Implement feedback to the players (winning or game is a draw)
+																																																																																																																																																																																																																																																																																																																																																																																																																																														6. End the game, avoid further playing
+																																																																																																																																																																																																																																																																																																																																																																																																																																														7. Add a "Play again button"
+																																																																																																																																																																																																																																																																																																																																																																																																																																														8. Implement "eternal" game statistics (using local storage!)
+																																																																																																																																																																																																																																																																																																																																																																																																																																														9. Style the game as fancy and responsive as you can ;-)
 
-																																																																																																																																																																																																																																																																																																																																																																																																																								*/
+																																																																																																																																																																																																																																																																																																																																																																																																																																														*/
 
 		// global game variables
 		let player, fields, fieldPlayed, fieldPlayer0, fieldPlayer1, msg, Xcount, Ocount;
@@ -68,10 +71,12 @@
 		msg = document.querySelector('#msg');
 		counterX = document.querySelector('#counterX');
 		counterO = document.querySelector('#counterO');
+		tie = document.querySelector('#tie');
 
-		//player1 and player2 score
+		//player1, player2, tie score
 		let XScore = 0;
 		let OScore = 0;
+		let tieScore = 0;
 
 		console.log(counterX, counterO, Ocount)
 
@@ -112,6 +117,8 @@
 				fieldPlayer0.includes(2) && fieldPlayer0.includes(5) && fieldPlayer0.includes(8) ||
 				fieldPlayer0.includes(2) && fieldPlayer0.includes(4) && fieldPlayer0.includes(6)
 			) {
+				XScore++;
+				counterX.innerHTML = XScore;
 				msg.innerHTML = 'player X won!'
 				gameStats();
 				gameOver();
@@ -125,11 +132,16 @@
 				fieldPlayer1.includes(2) && fieldPlayer1.includes(5) && fieldPlayer1.includes(8) ||
 				fieldPlayer1.includes(2) && fieldPlayer1.includes(4) && fieldPlayer1.includes(6)
 			) {
+				OScore++;
+				counterO.innerHTML = OScore;
 				msg.innerHTML = 'player O won!'
 				gameStats();
 				gameOver();
 			} else if (fieldPlayed.length == 9) {
+				tieScore++;
+				tie.innerHTML = tieScore;
 				msg.innerHTML = 'there was a tie!'
+				gameStats();
 				gameOver();
 			}
 		}
@@ -144,30 +156,15 @@
 		function playAgain() {
 			// restart the game
 			window.location.reload(true);
+
+			// Remove all localStorage data
+			localStorage.clear();
 		}
 
 		function gameStats() {
 			// game stats using local storage
 
-			if (fieldPlayer0.includes(0) && fieldPlayer0.includes(1) && fieldPlayer0.includes(2) ||
-				fieldPlayer0.includes(3) && fieldPlayer0.includes(4) && fieldPlayer0.includes(5) ||
-				fieldPlayer0.includes(6) && fieldPlayer0.includes(7) && fieldPlayer0.includes(8) ||
-				fieldPlayer0.includes(0) && fieldPlayer0.includes(3) && fieldPlayer0.includes(6) ||
-				fieldPlayer0.includes(1) && fieldPlayer0.includes(4) && fieldPlayer0.includes(7) ||
-				fieldPlayer0.includes(2) && fieldPlayer0.includes(5) && fieldPlayer0.includes(8) ||
-				fieldPlayer0.includes(2) && fieldPlayer0.includes(4) && fieldPlayer0.includes(6)) {
-				XScore++;
-				counterX.innerHTML = XScore;
-			} else if (fieldPlayer1.includes(0) && fieldPlayer1.includes(1) && fieldPlayer1.includes(2) ||
-				fieldPlayer1.includes(3) && fieldPlayer1.includes(4) && fieldPlayer1.includes(5) ||
-				fieldPlayer1.includes(6) && fieldPlayer1.includes(7) && fieldPlayer1.includes(8) ||
-				fieldPlayer1.includes(0) && fieldPlayer1.includes(3) && fieldPlayer1.includes(6) ||
-				fieldPlayer1.includes(1) && fieldPlayer1.includes(4) && fieldPlayer1.includes(7) ||
-				fieldPlayer1.includes(2) && fieldPlayer1.includes(5) && fieldPlayer1.includes(8) ||
-				fieldPlayer1.includes(2) && fieldPlayer1.includes(4) && fieldPlayer1.includes(6)) {
-				OScore++;
-				counterO.innerHTML = OScore;
-			}
+
 
 		}
 	</script>
