--- a/00-tic-tac-toe.html
+++ b/00-tic-tac-toe.html
@@ -4,12 +4,48 @@
 <head>
 	<meta charset="utf-8">
 	<title>Tic Tac Toe</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="favi.png">
 </head>
 
 <body>
-	<h1>TIC TAC TOE, 2 player</h1>
-	<table width="400" border="1">
-		<tbody>
+	<button id="newgame">Restart!</button>
+	<h1>TIC TAC TOE</h1>
+	<h2 id="msg">Click fields to play!</h2>
+
+
+
+
+	<div id="secounddiv">
+		<div id="gamescore">
+
+			<h2>Game score</h2>
+			<br>
+			<p>Player X :</p>
+			<p id="XScore"></p>
+			<br>
+			<br>
+			<p>Player O :</p>
+			<p id="OScore"></p>
+			<br>
+			<br>
+			<p>TieScore :</p>
+			<p id="tieScore"></p>
+
+			<br>
+
+			<br>
+			<button id="restart">Next turn!</button>
+
+
+		</div>
+	</div>
+
+	<div id="firstdiv">
+		<table>
 			<tr>
 				<td id="0">&nbsp;</td>
 				<td id="1">&nbsp;</td>
@@ -25,79 +61,95 @@
 				<td id="7">&nbsp;</td>
 				<td id="8">&nbsp;</td>
 			</tr>
-		</tbody>
-	</table>
-	<h2>Game score</h2>
-	<p>Player X :</p>
-	<h2 id="counterX">0</h2>
-	<p>Player O :</p>
-	<h2 id="counterO">0</h2>
-	<p>Tie :</p>
-	<h2 id="tie">0</h2>
-	<!-- restart -->
-	<h2 id="msg">Click fields to play!</h2>
-	<button id="restart">Restart game!</button>
+		</table>
+		<p id="FieldTakenMsg"></p>
+		<br>
+
+	</div>
 
 	<script>
-		/*
-																																																																																																																																																																																																																																																																																																																																																																																																																																														Stuff to handle ;-):
-																																																																																																																																																																																																																																																																																																																																																																																																																																														1. Make the fields clickable (player0 uses "X", player1 "0")
-																																																																																																																																																																																																																																																																																																																																																																																																																																														2. Keep track of all used fields (fieldsPlayed) and of the fields each player chose (fieldsPlayer0, fieldsPlayer1)
-																																																																																																																																																																																																																																																																																																																																																																																																																																														3. Avoid that úsed fields can be played again and implement feedback like "Field already taken" (alert();)
-																																																																																																																																																																																																																																																																																																																																																																																																																																														4. Check for winning combinations
-																																																																																																																																																																																																																																																																																																																																																																																																																																														5. Implement feedback to the players (winning or game is a draw)
-																																																																																																																																																																																																																																																																																																																																																																																																																																														6. End the game, avoid further playing
-																																																																																																																																																																																																																																																																																																																																																																																																																																														7. Add a "Play again button"
-																																																																																																																																																																																																																																																																																																																																																																																																																																														8. Implement "eternal" game statistics (using local storage!)
-																																																																																																																																																																																																																																																																																																																																																																																																																																														9. Style the game as fancy and responsive as you can ;-)
-
-																																																																																																																																																																																																																																																																																																																																																																																																																																														*/
-
 		// global game variables
-		let player, fields, fieldPlayed, fieldPlayer0, fieldPlayer1, msg, Xcount, Ocount;
+		let player, fields, fieldPlayed, fieldPlayer0, fieldPlayer1, msg, FieldTakenMsg;
 
+		//Getting the ids for button restart and messages
+		FieldTakenMsg = document.querySelector('#FieldTakenMsg');
 		document.getElementById("restart").addEventListener("click", playAgain);
-
-		player = 0;
-
-		fields = [];
-		fields = document.getElementsByTagName("td");
-		console.log(fields);
-
-		fieldPlayed = [];
-		fieldPlayer0 = [];
-		fieldPlayer1 = [];
-
+		document.getElementById("newgame").addEventListener("click", reset);
 		msg = document.querySelector('#msg');
-		counterX = document.querySelector('#counterX');
-		counterO = document.querySelector('#counterO');
-		tie = document.querySelector('#tie');
 
 		//player1, player2, tie score
 		let XScore = 0;
 		let OScore = 0;
 		let tieScore = 0;
 
-		console.log(counterX, counterO, Ocount)
+		// localStorage data
+		localStorage.getItem('XscoreItem');
+		localStorage.getItem('OScoreItem');
+		localStorage.getItem('tieScoreItem');
+
+		//If localstorage item is larger than 0, it will show the score value
+		if (localStorage.getItem('XScoreItem') > 0) {
+			XScore = Number(localStorage.getItem('XScoreItem'));
+		}
+		if (localStorage.getItem('OScoreItem') > 0) {
+			OScore = Number(localStorage.getItem('OScoreItem'));
+		}
+		if (localStorage.getItem('tieScoreItem') > 0) {
+			tieScore = Number(localStorage.getItem('tieScoreItem'));
+		}
+
+		//Displaying scores in inner HTML
+		document.querySelector('#XScore').innerHTML = Number(localStorage.getItem('XScoreItem'));
+		document.querySelector('#OScore').innerHTML = Number(localStorage.getItem('OScoreItem'));
+		document.querySelector('#tieScore').innerHTML = Number(localStorage.getItem('tieScoreItem'));
+
+		player = 0;
+
+		fields = [];
+		fields = document.getElementsByTagName('td');
+
+		fieldPlayed = [];
+		fieldPlayer0 = [];
+		fieldPlayer1 = [];
+
 
 		for (let i = 0; i < fields.length; i++) {
-			fields[i].addEventListener("click", play)
+			fields[i].addEventListener('click', play)
 		}
 
 		function play() {
+			// display message if field is occupied, & remove field
+			if (fieldPlayed.includes(this.id)) {
+				FieldTakenMsg.innerText = 'Field is occupied, please pick another.';
+				errorAudio();
+			} else if (fieldPlayed.includes(this.id) && 0 < fields.length) {
+				let remove = fieldPlayed.pop();
+				fieldPlayed.pop();
+				console.log("pop " + remove);
+			}
+
 			// game score mechanics, marking the fields
-			console.log('hello');
 
 			if (player === 0 && !fieldPlayed.includes(this.id)) {
-				this.innerHTML = "X";
-				this.style.color = 'blue';
+				// Empty our errors if there is no errors
+				FieldTakenMsg.innerText = '';
+
+				this.innerHTML = 'X';
+				this.style.color = '#01345B';
+
 				fieldPlayer0.push(parseInt(this.id));
 				player = 1;
+
 			} else if (player === 1 && !fieldPlayed.includes(this.id)) {
-				this.innerHTML = "O";
-				this.style.color = 'pink';
+
+				FieldTakenMsg.innerText = '';
+
+				this.innerHTML = 'O';
+				this.style.color = '#D80286';
+
 				fieldPlayer1.push(parseInt(this.id));
 				player = 0;
+
 			}
 
 			fieldPlayed.push(this.id);
@@ -115,14 +167,15 @@
 				fieldPlayer0.includes(0) && fieldPlayer0.includes(3) && fieldPlayer0.includes(6) ||
 				fieldPlayer0.includes(1) && fieldPlayer0.includes(4) && fieldPlayer0.includes(7) ||
 				fieldPlayer0.includes(2) && fieldPlayer0.includes(5) && fieldPlayer0.includes(8) ||
+				fieldPlayer0.includes(0) && fieldPlayer0.includes(4) && fieldPlayer0.includes(8) ||
 				fieldPlayer0.includes(2) && fieldPlayer0.includes(4) && fieldPlayer0.includes(6)
 			) {
 				XScore++;
-				counterX.innerHTML = XScore;
+				XScore.innerHTML = XScore;
 				msg.innerHTML = 'player X won!'
-				gameStats();
 				gameOver();
-
+				gameStats();
+				pointAudio()
 			} else if (
 				fieldPlayer1.includes(0) && fieldPlayer1.includes(1) && fieldPlayer1.includes(2) ||
 				fieldPlayer1.includes(3) && fieldPlayer1.includes(4) && fieldPlayer1.includes(5) ||
@@ -130,30 +183,44 @@
 				fieldPlayer1.includes(0) && fieldPlayer1.includes(3) && fieldPlayer1.includes(6) ||
 				fieldPlayer1.includes(1) && fieldPlayer1.includes(4) && fieldPlayer1.includes(7) ||
 				fieldPlayer1.includes(2) && fieldPlayer1.includes(5) && fieldPlayer1.includes(8) ||
+				fieldPlayer1.includes(0) && fieldPlayer1.includes(4) && fieldPlayer1.includes(8) ||
 				fieldPlayer1.includes(2) && fieldPlayer1.includes(4) && fieldPlayer1.includes(6)
 			) {
 				OScore++;
-				counterO.innerHTML = OScore;
+				OScore.innerHTML = OScore;
 				msg.innerHTML = 'player O won!'
-				gameStats();
 				gameOver();
+				gameStats();
+				pointAudio()
 			} else if (fieldPlayed.length == 9) {
 				tieScore++;
-				tie.innerHTML = tieScore;
+				tieScore.innerHTML = tieScore;
 				msg.innerHTML = 'there was a tie!'
-				gameStats();
 				gameOver();
+				gameStats();
+				pointAudio()
 			}
 		}
 
 		function gameOver() {
+
+			// Display button
+			newgame.style.display = 'block';
 			// ending the game 
 			for (let i = 0; i < fields.length; i++) {
-				fields[i].removeEventListener("click", play)
+				fields[i].removeEventListener('click', play)
 			}
 		}
 
 		function playAgain() {
+
+			// reload page so next round can begin and all fields should be empty
+			location.reload();
+
+		}
+
+		function reset() {
+
 			// restart the game
 			window.location.reload(true);
 
@@ -161,11 +228,39 @@
 			localStorage.clear();
 		}
 
+
+
 		function gameStats() {
 			// game stats using local storage
 
+			// setItem(s)
+			localStorage.setItem('XScoreItem', XScore);
+			localStorage.setItem('OScoreItem', OScore);
+			localStorage.setItem('tieScoreItem', tieScore);
+
+			// set the value(s) as numbers
+			localStorage.XScoreItem = Number(localStorage.XScoreItem);
+			localStorage.OScoreItem = Number(localStorage.OScoreItem);
+			localStorage.tieScoreItem = Number(localStorage.tieScoreItem);
+
+			// showing data in innerHTML
+			document.getElementById('XScore').innerHTML = localStorage.XScoreItem;
+			document.getElementById('OScore').innerHTML = localStorage.OScoreItem;
+			document.getElementById('tieScore').innerHTML = localStorage.tieScoreItem;
+
+		}
+
+		function pointAudio() {
+			var audio = new Audio(
+				'point.mp3');
+			audio.play();
+		}
 
 
+		function errorAudio() {
+			var audio = new Audio(
+				'error.mp3');
+			audio.play();
 		}
 	</script>
 </body>
